[metadata]
name = habraproxy
description-file = README.rst

[flake8]
max-complexity = 6
max-line-length = 120
max-methods=10
enable-extensions = G
format = pylint
isort-show-traceback = True
exclude =
    env/*

# ATTENTION! If you're adding a rule to ignore - update the list below with code description and (optionally) the reason
# why it is disabled

# Just try to avoid non-ascii symbols in code at all (unless it is really needed to use them)
# C101: Coding magic comment not found

# Obsolete, see https://lintlyci.github.io/Flake8Rules/rules/W503.html
# W503: line break before binary operator

# Docstrings are not required (but advisable)
# D100: Missing docstring in public module
# D101: Missing docstring in public class
# D102: Missing docstring in public method
# D103: Missing docstring in public function
# D104: Missing docstring in public package
# D105: Missing docstring in magic method
# D106: Missing docstring in public nested class
# D107: Missing docstring in __init__

# Disabling some low-level bandit warning, that would often cause failures for no reason
# S311: Standard pseudo-random generators are not suitable for security/cryptographic purposes.
# S404: Consider possible security implications associated with subprocess module.
# S603: subprocess call - check for execution of untrusted input

# Warning seems to be obsolete.
# S410: Using html to parse untrusted XML data is known to be vulnerable to XML attacks.
#       Replace html with the equivalent defusedxml package.

# Rule is too annoying to follow it strictly
# WPS110: Found wrong variable name

# This pattern is widely used, it would be annoying to follow this rule
# WPS115: Found upper-case constant in a class

# Don't insist on this rule
# WPS306: Found class without a base class

# It is useful for multiline strings. Just avoid such concatenation for single line ones.
# WPS326: Found implicit string concatenation

# Sometimes it is more clear to have `else` branch. Just be reasonable.
# WPS503: Found useless returning `else` statement

ignore =
    C101,
    W503,
    D100,D101,D102,D103,D104,D105,D105,D106,D107,
    S311,S404,S410,S603,
    WPS110,WPS115,WPS306,WPS326,WPS503

per-file-ignores =
    # Some warnings may (or have to) be suppressed for tests
    # S101: Use of assert detected. The enclosed code will be removed when compiling to optimised byte code.
    # WPS226: Found string constant over-use
    # WPS432: Found magic number
    # WPS437: Found protected attribute usage
    tests/*:S101,WPS226,WPS432,WPS437
    # E501: line too long
    tests/test_services.py:E501,S101,WPS226,WPS432,WPS437

[isort]
skip_glob = env/*
line_length = 119
# 3 - vertical hanging indent (inside parentheses, each import in a separate line)
multi_line_output = 3
indent = 4
default_section = FIRSTPARTY
order_by_type = true
atomic = true
combine_as_imports = true
combine_star = false
include_trailing_comma = true
use_parentheses = true

[mypy]
python_version = 3.6
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
ignore_errors = False
ignore_missing_imports = True
implicit_reexport = False
strict_optional = True
strict_equality = True
no_implicit_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unreachable = True
warn_no_return = True
follow_imports=normal

[tool:pytest]
python_files = test_*.py

[coverage:run]
omit =
    env/*

[coverage:report]
omit =
    env/*
    tests/*
